# study-open-ai-docs

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
01_quickstart/: README.md  main.py
docs/: quickstart.md
settings/: configs.py
