[tool.poetry]
name = "study-open-ai-docs"
version = "0.1.0"
description = ""
authors = ["devjyno <devjyno96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.34.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
