[tool.poetry]
name = "study-open-ai-docs"
version = "0.1.0"
description = ""
authors = ["devjyno <devjyno96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.34.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
ruff = "^0.4.9"
pre-commit = "^3.7.1"
ipython = "^8.25.0"



[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]



[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "openai"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
